--- a/QRTools.csproj
+++ b/QRTools.csproj
@@ -9,7 +9,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="gradient_presets.yml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="gradient_presets.yml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="SkiaSharp.QrCode" Version="0.9.0" />
+    <PackageReference Include="YamlDotNet" Version="16.3.0" />
   </ItemGroup>
 
 </Project>
